Set theme colors

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,3 +5,10 @@ $body-bg: #f8fafc;
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+
+//My Colors
+$PRIMARY_COLOR: #D7385E;
+$SECONDARY_COLOR: #EDC988;
+$LIGHT_COLOR: #F8EFD4;
+$DARK_COLOR: #132743;
